--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
     # Lifecycle (IQ Server) application ID. When Automatic Applications is enabled and the application ID has not yet been used, a new application will be created with the given ID.
           application-id: SBOM_githubaction
     # Space-separated list of paths to specific files, directories, or docker images. Apache Ant-styled patterns are allowed.
-          scan-targets: "**/*.jar"
+          scan-targets: "**/*"
           
