--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,10 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
       - name: Sonatype GitHub Actions
+        id: evaluate
       # You may pin to the exact commit or the version.
       # uses: sonatype/actions@0cd45a159282883b0592f035d55f75b5f270ff7f
-        uses: sonatype/actions@v1.3.0
+        uses: sonatype/actions/evaluate@v1
         with: 
      # Lifecycle (IQ Server) URL (e.g. http://localhost:8070).
           iq-server-url: http://175.198.83.251:8070
